--- a/src/css/blocks.css
+++ b/src/css/blocks.css
@@ -5,7 +5,7 @@
   height: 40px;
   background-color: #002F6C;
   color: #fff;
-  font-size: var(--size--lg);
+  font-size: 35px;
   line-height: 40px;
   text-align: center;
 }
