--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -29,8 +29,6 @@ const structuredData = {
 };
 ---
 
-<Layout mainClass="layout-grid">
-  <div class="align-wide">
-    <slot />
-  </div>
+<Layout>
+  <slot />
 </Layout>
