--- a/src/css/layouts.css
+++ b/src/css/layouts.css
@@ -18,26 +18,59 @@ CONTENTS
   justify-content: space-between;
 }
 
+/* WRAPPER */
+.wrapper {
+  width: var(--wrapper-width);
+  padding-inline: var(--gutter);
+  margin-inline: auto;
+}
+
+.wrapper.content {
+  width: var(--content-width);
+}
+
+.wrapper .wrapper {
+  padding-inline: 0;
+}
+
+.wrapper > .align-wide,
+.wrapper > .astro-code {
+  margin-inline-start: 50%;
+  width: min(960px, 100vw);
+  transform: translateX(-50%);
+}
+
 /* LAYOUT-GRID */
 .layout-grid {
   display: grid;
+  gap: var(--gutter);
   grid-template-columns:
-    [full-start] 1fr var(--size--md) [wide-start] 1fr [content-start] min(calc(100% - var(--size--md) * 2), 60ch) [content-end] 1fr [wide-end] var(--size--md) 1fr [full-end];
+    [full-start] 
+    1fr 
+    [wide-start] 
+    1fr
+    [content-start] 
+    min(100% - var(--gutter) * 4, 60ch) 
+    [content-end] 
+    1fr 
+    [wide-end] 
+    1fr 
+    [full-end];
 }
 
-.layout-grid>* {
+.layout-grid > * {
   grid-column: content;
 }
 
-.layout-grid>.align-full {
+.layout-grid >.full {
   grid-column: full;
 }
 
-.layout-grid>.align-wide {
+.layout-grid > .wide {
   grid-column: wide;
 }
 
-.layout-grid>.astro-code {
+.layout-grid > .astro-code {
   grid-column: wide;
 }
 
@@ -56,7 +89,7 @@ CONTENTS
   gap: var(--gutter, var(--space--md));
 }
 
-.switcher>* {
+.switcher > * {
   flex-grow: 1;
   flex-basis: calc((var(--threshold) - 100%) * 999);
 }
