--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -40,8 +40,9 @@ const structuredData = {
         type="application/ld+json"
         set:html={JSON.stringify(structuredData)}
     />
-    <div class="layout-grid flow">
+    <div class="flow wrapper content">
         <h1>{title}</h1>
+        {preamble ? <p class="size-lg">{preamble}</p> : ''}
         <slot />
         <p>
             <small>
