--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,65 +1,44 @@
 ---
 import Page from "../layouts/Page.astro";
-import { getCollection } from "astro:content";
-import { getBlogParams } from "../utils/params";
-
-const blog = await getCollection("blog");
-const allPosts = blog
-  .map((item) => ({ ...item, ...getBlogParams(item) }))
-  .sort((a, b) => new Date(b.date).getTime() - new Date(a.date).getTime());
-const posts = allPosts.slice(0, 5);
+import Posts from '../components/Posts.astro';
 ---
 
 <Page title="Markus Finell - Web Developer">
-  <div class="region switcher switch-md gap-md-2xl">
-    <h1 class="size-4xl">Markus Finell</h1>
-    <div class="flow grow-2">
-      <p>
-        I am a web developer at
-        <a href="https://www.storyhouseegmont.se/">Story House Egmont</a>
-        in Stockholm, Sweden.
-      </p>
-      <p>
-        I have been working in web development for almost a decade. My goal is
-        to build accessible, fast, and beautiful experiences for the web. Most
-        of my work has been with/for/around WordPress, but I love the
-        flexibility and control of building static, headless sites with Astro,
-        regardless of CMS.
-      </p>
-      <p>
-        Outside of work I enjoy
-        <a href="https://www.youtube.com/watch?v=0LH6-w57Slw"
-          >growing vegetables</a
-        >
-        in the garden, running
-        <a href="https://strava.com/athletes/markusfinell">ultramarathons</a>,
-        spooning my dog, eating vegan food, and reading anything my wife
-        recommends.
-      </p>
+  <div class="wrapper">
+    <div class="region switcher switch-md gap-md-2xl">
+      <h1 class="size-4xl">Markus Finell</h1>
+      <div class="flow grow-2">
+        <p>
+          I am a web developer at
+          <a href="https://www.storyhouseegmont.se/">Story House Egmont</a>
+          in Stockholm, Sweden.
+        </p>
+        <p>
+          I have been working in web development for almost a decade. My goal is
+          to build accessible, fast, and beautiful experiences for the web. Most
+          of my work has been with/for/around WordPress, but I love the
+          flexibility and control of building static, headless sites with Astro,
+          regardless of CMS.
+        </p>
+        <p>
+          Outside of work I enjoy
+          <a href="https://www.youtube.com/watch?v=0LH6-w57Slw"
+            >growing vegetables</a
+          >
+          in the garden, running
+          <a href="https://strava.com/athletes/markusfinell">ultramarathons</a>,
+          spooning my dog, eating vegan food, and reading anything my wife
+          recommends.
+        </p>
+      </div>
+    </div>
+    <hr />
+    <div class="region stack gap-xl">
+      <div class="flow">
+        <h2>Recent words</h2>
+
+        <Posts postsPerPage={5} moreLink={true} />
+      </div>
     </div>
   </div>
-  <hr />
-  {
-    posts.length ? (
-      <div class="region stack gap-xl">
-        <div class="flow">
-          <h2>Recent words</h2>
-
-          <ul role="list" class="stack gap-xs">
-            {posts.map((post) => (
-              <li>
-                <a href={post.slug}>{post.title}</a>
-              </li>
-            ))}
-          </ul>
-        </div>
-
-        {allPosts.length > posts.length && (
-          <p>
-            <a href="/words">More words</a>
-          </p>
-        )}
-      </div>
-    ) : null
-  }
 </Page>
