--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -14,6 +14,47 @@
   padding-block: var(--space--xl);
 }
 
+.dashed-border {
+  --spacing: 20px;
+  --length: 10px;
+  --thickness: 2px;
+  background-image: repeating-linear-gradient(
+    0deg, 
+    var(--color--foreground), 
+    var(--color--foreground) var(--length), 
+    transparent var(--length), 
+    transparent var(--spacing), 
+    var(--color--foreground) var(--spacing)
+  ), 
+  repeating-linear-gradient(
+    90deg, 
+    var(--color--foreground), 
+    var(--color--foreground) var(--length), 
+    transparent var(--length), 
+    transparent var(--spacing), 
+    var(--color--foreground) var(--spacing)
+  ), 
+  repeating-linear-gradient(
+    180deg, 
+    var(--color--foreground), 
+    var(--color--foreground) var(--length), 
+    transparent var(--length), 
+    transparent var(--spacing), 
+    var(--color--foreground) var(--spacing)
+  ), 
+  repeating-linear-gradient(
+    270deg, 
+    var(--color--foreground), 
+    var(--color--foreground) var(--length), 
+    transparent var(--length), 
+    transparent var(--spacing), 
+    var(--color--foreground) var(--spacing)
+  );
+  background-size: var(--thickness) 100%, 100% var(--thickness), var(--thickness) 100% , 100% var(--thickness);
+  background-position: 0 0, 0 0, 100% 0, 0 100%;
+  background-repeat: no-repeat;
+}
+
 /* Size */
 .size-xs {
   font-size: var(--size--xs);
