Fixed fluid type

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,5 +40,7 @@ import "../css/app.css";
         </p>
       </div>
     </footer>
+
+    <script src="../js/script.js"></script>
   </body>
 </html>
