--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import Posts from '../components/Posts.astro';
 <Page title="Markus Finell - Web Developer">
   <div class="wrapper">
     <div class="region switcher switch-md gap-md-2xl">
-      <h1 class="size-4xl">Markus Finell</h1>
-      <div class="flow grow-2">
+      <h1 class="size-4xl grow-2">Markus Finell</h1>
+      <div class="flow grow-3">
         <p>
           I am a web developer at
           <a href="https://www.storyhouseegmont.se/">Story House Egmont</a>
