--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: var(--size--md);
-  line-height: var(--leading--md);
+  line-height: var(--leading--lg);
   color: var(--color--foreground);
   background-color: var(--color--background);
 }
@@ -15,7 +15,7 @@ h4 {
 
 h1 {
   font-size: var(--size--2xl);
-  line-height: var(--leading--xs);
+  line-height: var(--leading--sm);
 }
 
 h2 {
@@ -30,6 +30,7 @@ h3 {
 
 p {
   max-width: 60ch;
+  text-wrap: pretty;
 }
 
 a:not(:has(*)) {
@@ -47,4 +48,13 @@ a:not(:has(*)):hover:before {
   position: absolute;
   inset: 0 0 -.1em;
   border-block-end: 2px dashed currentColor;
+}
+
+code {
+  font-size: 0.75em;
+}
+
+:not(.astro-code) > code {
+  padding: 0.25em;
+  background-color: #24292e;
 }
