--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,13 +1,14 @@
 /* Fluid size / space setup */
 :root {
+  --root-size: 16;
   --fluid-min-width: 320;
-  --fluid-max-width: 1512;
+  --fluid-max-width: 1440;
 
   --fluid-screen: min(100vw, calc(var(--fluid-max-width) * 1px));
-  --fluid-bp: calc((var(--fluid-screen) - var(--fluid-min-width) / 16 * 1rem) / (var(--fluid-max-width) - var(--fluid-min-width)));
+  --fluid-bp: calc((var(--fluid-screen) - var(--fluid-min-width) / var(--root-size) * 1rem) / (var(--fluid-max-width) - var(--fluid-min-width)));
 
   --min-scale: 1.2;
-  --max-scale: 1.333;
+  --max-scale: 1.414;
 }
 
 /* Size */
@@ -18,8 +19,8 @@
   --size-sm-min: calc(var(--size-md-min) / var(--min-scale));
   --size-sm-max: calc(var(--size-md-max) / var(--max-scale));
 
-  --size-md-min: 18;
-  --size-md-max: 24;
+  --size-md-min: calc(var(--root-size) * 0.8);
+  --size-md-max: calc(var(--root-size) * 1.2);
 
   --size-lg-min: calc(var(--size-md-min) * var(--min-scale));
   --size-lg-max: calc(var(--size-md-max) * var(--max-scale));
@@ -36,14 +37,14 @@
   --size-4xl-min: calc(var(--size-3xl-min) * var(--min-scale));
   --size-4xl-max: calc(var(--size-3xl-max) * var(--max-scale));
 
-  --size--xs: calc(((var(--size-xs-min) / 16) * 1rem) + (var(--size-xs-max) - var(--size-xs-min)) * var(--fluid-bp));
-  --size--sm: calc(((var(--size-sm-min) / 16) * 1rem) + (var(--size-sm-max) - var(--size-sm-min)) * var(--fluid-bp));
-  --size--md: calc(((var(--size-md-min) / 16) * 1rem) + (var(--size-md-max) - var(--size-md-min)) * var(--fluid-bp));
-  --size--lg: calc(((var(--size-lg-min) / 16) * 1rem) + (var(--size-lg-max) - var(--size-lg-min)) * var(--fluid-bp));
-  --size--xl: calc(((var(--size-xl-min) / 16) * 1rem) + (var(--size-xl-max) - var(--size-xl-min)) * var(--fluid-bp));
-  --size--2xl: calc(((var(--size-2xl-min) / 16) * 1rem) + (var(--size-2xl-max) - var(--size-2xl-min)) * var(--fluid-bp));
-  --size--3xl: calc(((var(--size-3xl-min) / 16) * 1rem) + (var(--size-3xl-max) - var(--size-3xl-min)) * var(--fluid-bp));
-  --size--4xl: calc(((var(--size-4xl-min) / 16) * 1rem) + (var(--size-4xl-max) - var(--size-4xl-min)) * var(--fluid-bp));
+  --size--xs: calc(((var(--size-xs-min) / var(--root-size)) * 1rem) + (var(--size-xs-max) - var(--size-xs-min)) * var(--fluid-bp));
+  --size--sm: calc(((var(--size-sm-min) / var(--root-size)) * 1rem) + (var(--size-sm-max) - var(--size-sm-min)) * var(--fluid-bp));
+  --size--md: calc(((var(--size-md-min) / var(--root-size)) * 1rem) + (var(--size-md-max) - var(--size-md-min)) * var(--fluid-bp));
+  --size--lg: calc(((var(--size-lg-min) / var(--root-size)) * 1rem) + (var(--size-lg-max) - var(--size-lg-min)) * var(--fluid-bp));
+  --size--xl: calc(((var(--size-xl-min) / var(--root-size)) * 1rem) + (var(--size-xl-max) - var(--size-xl-min)) * var(--fluid-bp));
+  --size--2xl: calc(((var(--size-2xl-min) / var(--root-size)) * 1rem) + (var(--size-2xl-max) - var(--size-2xl-min)) * var(--fluid-bp));
+  --size--3xl: calc(((var(--size-3xl-min) / var(--root-size)) * 1rem) + (var(--size-3xl-max) - var(--size-3xl-min)) * var(--fluid-bp));
+  --size--4xl: calc(((var(--size-4xl-min) / var(--root-size)) * 1rem) + (var(--size-4xl-max) - var(--size-4xl-min)) * var(--fluid-bp));
 }
 
 /* Space */
@@ -76,29 +77,29 @@
   --space-4xl-max: (var(--space-md-max) * 8);
 
   /* T-shirt sizes */
-  --space--2xs: calc(((var(--space-2xs-min) / 16) * 1rem) + (var(--space-2xs-max) - var(--space-2xs-min)) * var(--fluid-bp));
-  --space--xs: calc(((var(--space-xs-min) / 16) * 1rem) + (var(--space-xs-max) - var(--space-xs-min)) * var(--fluid-bp));
-  --space--sm: calc(((var(--space-sm-min) / 16) * 1rem) + (var(--space-sm-max) - var(--space-sm-min)) * var(--fluid-bp));
-  --space--md: calc(((var(--space-md-min) / 16) * 1rem) + (var(--space-md-max) - var(--space-md-min)) * var(--fluid-bp));
-  --space--lg: calc(((var(--space-lg-min) / 16) * 1rem) + (var(--space-lg-max) - var(--space-lg-min)) * var(--fluid-bp));
-  --space--xl: calc(((var(--space-xl-min) / 16) * 1rem) + (var(--space-xl-max) - var(--space-xl-min)) * var(--fluid-bp));
-  --space--2xl: calc(((var(--space-2xl-min) / 16) * 1rem) + (var(--space-2xl-max) - var(--space-2xl-min)) * var(--fluid-bp));
-  --space--3xl: calc(((var(--space-3xl-min) / 16) * 1rem) + (var(--space-3xl-max) - var(--space-3xl-min)) * var(--fluid-bp));
-  --space--4xl: calc(((var(--space-4xl-min) / 16) * 1rem) + (var(--space-4xl-max) - var(--space-4xl-min)) * var(--fluid-bp));
+  --space--2xs: calc(((var(--space-2xs-min) / var(--root-size)) * 1rem) + (var(--space-2xs-max) - var(--space-2xs-min)) * var(--fluid-bp));
+  --space--xs: calc(((var(--space-xs-min) / var(--root-size)) * 1rem) + (var(--space-xs-max) - var(--space-xs-min)) * var(--fluid-bp));
+  --space--sm: calc(((var(--space-sm-min) / var(--root-size)) * 1rem) + (var(--space-sm-max) - var(--space-sm-min)) * var(--fluid-bp));
+  --space--md: calc(((var(--space-md-min) / var(--root-size)) * 1rem) + (var(--space-md-max) - var(--space-md-min)) * var(--fluid-bp));
+  --space--lg: calc(((var(--space-lg-min) / var(--root-size)) * 1rem) + (var(--space-lg-max) - var(--space-lg-min)) * var(--fluid-bp));
+  --space--xl: calc(((var(--space-xl-min) / var(--root-size)) * 1rem) + (var(--space-xl-max) - var(--space-xl-min)) * var(--fluid-bp));
+  --space--2xl: calc(((var(--space-2xl-min) / var(--root-size)) * 1rem) + (var(--space-2xl-max) - var(--space-2xl-min)) * var(--fluid-bp));
+  --space--3xl: calc(((var(--space-3xl-min) / var(--root-size)) * 1rem) + (var(--space-3xl-max) - var(--space-3xl-min)) * var(--fluid-bp));
+  --space--4xl: calc(((var(--space-4xl-min) / var(--root-size)) * 1rem) + (var(--space-4xl-max) - var(--space-4xl-min)) * var(--fluid-bp));
 
   /* One-up pairs */
-  --space--2xs-xs: calc(((var(--space-2xs-min) / 16) * 1rem) + (var(--space-xs-max) - var(--space-2xs-min)) * var(--fluid-bp));
-  --space--xs-sm: calc(((var(--space-xs-min) / 16) * 1rem) + (var(--space-sm-max) - var(--space-xs-min)) * var(--fluid-bp));
-  --space--sm-md: calc(((var(--space-sm-min) / 16) * 1rem) + (var(--space-md-max) - var(--space-sm-min)) * var(--fluid-bp));
-  --space--md-lg: calc(((var(--space-md-min) / 16) * 1rem) + (var(--space-lg-max) - var(--space-md-min)) * var(--fluid-bp));
-  --space--lg-xl: calc(((var(--space-lg-min) / 16) * 1rem) + (var(--space-xl-max) - var(--space-lg-min)) * var(--fluid-bp));
-  --space--xl-2xl: calc(((var(--space-xl-min) / 16) * 1rem) + (var(--space-2xl-max) - var(--space-xl-min)) * var(--fluid-bp));
-  --space--2xl-3xl: calc(((var(--space-2xl-min) / 16) * 1rem) + (var(--space-3xl-max) - var(--space-2xl-min)) * var(--fluid-bp));
-  --space--3xl-4xl: calc(((var(--space-3xl-min) / 16) * 1rem) + (var(--space-4xl-max) - var(--space-3xl-min)) * var(--fluid-bp));
+  --space--2xs-xs: calc(((var(--space-2xs-min) / var(--root-size)) * 1rem) + (var(--space-xs-max) - var(--space-2xs-min)) * var(--fluid-bp));
+  --space--xs-sm: calc(((var(--space-xs-min) / var(--root-size)) * 1rem) + (var(--space-sm-max) - var(--space-xs-min)) * var(--fluid-bp));
+  --space--sm-md: calc(((var(--space-sm-min) / var(--root-size)) * 1rem) + (var(--space-md-max) - var(--space-sm-min)) * var(--fluid-bp));
+  --space--md-lg: calc(((var(--space-md-min) / var(--root-size)) * 1rem) + (var(--space-lg-max) - var(--space-md-min)) * var(--fluid-bp));
+  --space--lg-xl: calc(((var(--space-lg-min) / var(--root-size)) * 1rem) + (var(--space-xl-max) - var(--space-lg-min)) * var(--fluid-bp));
+  --space--xl-2xl: calc(((var(--space-xl-min) / var(--root-size)) * 1rem) + (var(--space-2xl-max) - var(--space-xl-min)) * var(--fluid-bp));
+  --space--2xl-3xl: calc(((var(--space-2xl-min) / var(--root-size)) * 1rem) + (var(--space-3xl-max) - var(--space-2xl-min)) * var(--fluid-bp));
+  --space--3xl-4xl: calc(((var(--space-3xl-min) / var(--root-size)) * 1rem) + (var(--space-4xl-max) - var(--space-3xl-min)) * var(--fluid-bp));
 
   /* Custom pairs */
-  --space--sm-lg: calc(((var(--space-sm-min) / 16) * 1rem) + (var(--space-lg-max) - var(--space-sm-min)) * var(--fluid-bp));
-  --space--md-2xl: calc(((var(--space-md-min) / 16) * 1rem) + (var(--space-2xl-max) - var(--space-md-min)) * var(--fluid-bp));
+  --space--sm-lg: calc(((var(--space-sm-min) / var(--root-size)) * 1rem) + (var(--space-lg-max) - var(--space-sm-min)) * var(--fluid-bp));
+  --space--md-2xl: calc(((var(--space-md-min) / var(--root-size)) * 1rem) + (var(--space-2xl-max) - var(--space-md-min)) * var(--fluid-bp));
 
   --gutter: var(--space--md);
 }
@@ -108,7 +109,7 @@
   --leading--xs: 1;
   --leading--sm: 1.15;
   --leading--md: 1.5;
-  --leading--lg: 1.7;
+  --leading--lg: 1.75;
 }
 
 /* Colors */
@@ -117,6 +118,7 @@
   --color--white: #fff;
   --color--foreground: var(--color--off-black);
   --color--background: var(--color--white);
+  --color--accent: #002F6C;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -129,5 +131,5 @@
 /* Misc */
 :root {
   --wrapper-width: min(1280px, 100vw);
-  --content-width: min(55ch, 100vw);
+  --content-width: min(60ch, 100vw);
 }
