--- a/src/css/blocks.css
+++ b/src/css/blocks.css
@@ -1,16 +1,43 @@
-.site-title {
-  text-decoration: none;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  background-color: #002F6C;
-  color: #fff;
-  font-size: 35px;
-  line-height: 40px;
-  text-align: center;
+.logo {
+    color: var(--color--foreground);
+    line-height: var(--leading--sm);
+    text-decoration: none;
+    font-size: var(--size--lg);
+    display: grid;
+    position: relative;
+    /* transform-origin: 50% 0;
+    transform-style: preserve-3d;
+    transition: transform 0.3s ease-in-out;
+    transform: rotateX(0deg) translateY(0); */
+}
+
+/* 
+.logo:before {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	height: 100%;
+	aspect-ratio: 1;
+	content: attr(data-hover);
+	transform: rotateX(-90deg);
+	transform-origin: 50% 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+    border: 0.1em solid var(--color--foreground);
+    color: var(--color--foreground);
+    font-size: var(--size--xl);
+} */
+
+.logo .name {
+    font-weight: bold;
+}
+
+.logo .title {
+    color: #ccc;
 }
 
 .astro-code {
-  padding: var(--space--md);
-  margin-block: var(--space--lg);
+    padding: var(--space--md);
+    margin-block: var(--space--lg);
 }
