--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,19 @@
-@import "reset.css";
-@import "variables.css";
-@import "global.css";
-@import "layouts.css";
+@import "global/reset.css";
+@import "global/variables.css";
+@import "global/global.css";
+
+@import "layouts/cluster.css";
+@import "layouts/flow.css";
+@import "layouts/grid.css";
+@import "layouts/repel.css";
+@import "layouts/stack.css";
+@import "layouts/switcher.css";
+
 @import "blocks.css";
-@import "utilities.css";
+
+@import "utilities/flex.css";
+@import "utilities/gap.css";
+@import "utilities/margin.css";
+@import "utilities/misc.css";
+@import "utilities/padding.css";
+@import "utilities/size.css";
