--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -34,13 +34,13 @@ const structuredData = {
 };
 ---
 
-<Layout>
+<Layout title={title}>
     <script
         slot="structured-data"
         type="application/ld+json"
         set:html={JSON.stringify(structuredData)}
     />
-    <div class="flow wrapper content">
+    <div class="region flow wrapper content">
         <h1>{title}</h1>
         {preamble ? <p class="size-lg">{preamble}</p> : ''}
         <slot />
