--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,42 +3,20 @@ import Page from "../layouts/Page.astro";
 import Posts from '../components/Posts.astro';
 ---
 
-<Page title="Markus Finell - Web Developer">
-  <div class="wrapper">
-    <div class="region switcher switch-md gap-md-2xl">
-      <h1 class="size-4xl grow-2">Markus Finell</h1>
-      <div class="flow grow-3">
-        <p>
-          I am a web developer at
-          <a href="https://www.storyhouseegmont.se/">Story House Egmont</a>
-          in Stockholm, Sweden.
-        </p>
-        <p>
-          I have been working in web development for almost a decade. My goal is
-          to build accessible, fast, and beautiful experiences for the web. Most
-          of my work has been with/for/around WordPress, but I love the
-          flexibility and control of building static, headless sites with Astro,
-          regardless of CMS.
-        </p>
-        <p>
-          Outside of work I enjoy
-          <a href="https://www.youtube.com/watch?v=0LH6-w57Slw"
-            >growing vegetables</a
-          >
-          in the garden, running
-          <a href="https://strava.com/athletes/markusfinell">ultramarathons</a>,
-          spooning my dog, eating vegan food, and reading anything my wife
-          recommends.
-        </p>
-      </div>
-    </div>
-    <hr />
-    <div class="region stack gap-xl">
-      <div class="flow">
-        <h2>Recent words</h2>
-
-        <Posts postsPerPage={5} moreLink={true} />
-      </div>
+<Page title="Markus Finell - Web Developer" bodyClass="home">
+  <div class="region">
+    <h1 class="size-4xl">Hi! I am a web developer from Stockholm, Sweden.</h1>
+  </div>
+  <div class="region flow">
+    <h2>Right now</h2>
+    <p>I work at Story House Egmont in Stockholm, Sweden.</p>
+    <p>I have been working in web development for over a decade. I build accessible, fast, and beautiful experiences for the web. Most of my work has been with/for/around WordPress, but I love building static, headless sites with Astro, regardless of CMS.</p>
+    <p>Outside of work I enjoy growing vegetables in the garden, running ultramarathons, spooning my dog, eating vegan food, and reading anything my wife recommends.</p>
+  </div>
+  <div class="region stack gap-xl">
+    <div class="flow">
+      <h2>Recent words</h2>
+      <Posts postsPerPage={5} moreLink={true} />
     </div>
   </div>
 </Page>
