--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,8 +27,8 @@ const siteTitle = `${title ? `${title} | ` : ''}${myName} - ${myTitle}`;
   </head>
   <body class={bodyClass}>
     <header>
-      <div class="pb repel items-center">
-        <a href="/" class="logo" data-hover={myInitial}>
+      <div class="pb cluster items-end gap-x-2xl">
+        <a href="/" class="logo grow" data-hover={myInitial}>
           <span class="name">{myName}</span>
           <span class="title">{myTitle}</span>
         </a>
