--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Page from "../layouts/Page.astro";
 import Posts from '../components/Posts.astro';
 ---
 
-<Page title="Markus Finell - Web Developer" bodyClass="home">
+<Page bodyClass="home">
   <div class="region">
     <h1 class="size-4xl">Hi! I am a web developer from Stockholm, Sweden.</h1>
   </div>
