--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -2,11 +2,11 @@
 import Layout from "./Layout.astro";
 
 interface Props {
-  title: string;
+  title?: string;
   bodyClass?: string;
 }
 
-const { title, bodyClass = '' } = Astro.props;
+const { title = '', bodyClass = '' } = Astro.props;
 
 const structuredData = {
   "@context": "https://schema.org",
