--- a/src/pages/words.astro
+++ b/src/pages/words.astro
@@ -3,7 +3,7 @@ import Page from "../layouts/Page.astro";
 import Posts from '../components/Posts.astro';
 ---
 
-<Page title="Words | Markus Finell - Web Developer">
+<Page title="Words">
   <div class="region wrapper content">
     <div class="flow">
       <h1>Words</h1>
