--- a/src/css/layouts/flow.css
+++ b/src/css/layouts/flow.css
@@ -1,9 +1,13 @@
+.flow {
+    --flow-space: var(--space, 1lh);
+}
+
 .flow > * + *,
 .flow--recursive * + * {
-    margin-block-start: 1lh;
+    margin-block-start: var(--flow-space);
 }
 
 .flow > :is(h1, h2, h3, h4, h5, h6) + *,
 .flow--recursive :is(h1, h2, h3, h4, h5, h6) + * {
-    margin-block-start: .5lh;
+    margin-block-start: calc(var(--flow-space) / 2);
 }
