--- a/src/css/utilities/padding.css
+++ b/src/css/utilities/padding.css
@@ -1,12 +1,11 @@
 .p {
-    padding: var(--space--md);
+    padding: var(--space, var(--space--md));
 }
 
 .pb {
-    padding-block: var(--space--md);
+    padding-block: var(--space, var(--space--md));
 }
 
 .pi {
-    padding-inline: var(--space--md);
+    padding-inline: var(--space, var(--space--md));
 }
-
